# ttpi

./: .gitignore  README.md  flake.nix
c/: CMakeLists.txt  README.md  build.sh
c/src/: CMakeLists.txt  host_hid_to_device_cdc.c  keymap.h  main.c  tusb_config_old.h
python/: test.py
rs/: Cargo.toml
rs/src/: main.rs
scripts/: check_coding.py
src/: CMakeLists.txt  keymap.h  main.c  tusb_config.h  usb_descriptors.c
